sidebar z-index issue fixed

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -88,6 +88,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 10;
   box-shadow: 2px 0 2px #20202050;
   background: #fff6bd;
 }
